--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="full-width">
         <div class="wrapper clearfix">
             <a id="logo" class="logo" href="#" title="Movie Database">Telerik Movie Database</a>
-            <a id="discover" class="button discover" href="#">Discover!</a>
+            <a id="discover" class="button discover" href="#">Have you watched this?</a>
         </div>
     </div>
 </header>
@@ -29,20 +29,7 @@
     <div class="full-width" id="movie-bg">
         <div class="background-color">
             <div class="wrapper clearfix" id="content">
-                <div class="results">
-                    <ul>
-                        <li><a id="prevPage" href="">Previous</a></li>
-                        <li><a id="nextPage" href="">Next</a></li>
-                    </ul>
-                    <div class="one-item clearfix">
-                        <img src="images/poster.jpg" alt="">
-                        <div class="small-info">
-                            <span class="year">2017</span>
-                            <span class="title">Spider-man: Homecoming</span>
-                            <span class="subtitle">With: Tom Holland, Other Actor, Another Actress and others.</span>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
@@ -50,7 +37,7 @@
 <footer>
     <div class="full-width">
         <div class="wrapper clearfix">
-            <a href="https://www.themoviedb.org/" title="The Movie Database"><img src="images/tmdb.png" alt=""></a>
+            <a href="https://www.themoviedb.org/documentation/api" title="The Movie Database"><img src="images/tmdb.png" alt=""></a>
             <ul>
                 <li>&copy; 2018 <a target="_blank" href="https://github.com/Smytt">Kiril Parushev</a></li>
                 <li><a target="_blank" href="http://telerikacademy.com/">Telerik Academy</a></li>
