--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Telerik Movie Database</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
 <header>
@@ -51,7 +52,7 @@
         src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-<script src="js/htmlBuilder.js"></script>
+<script src="js/render.js"></script>
 <script src="js/tmdb.js"></script>
 <script src="js/app.js"></script>
 </body>
