turned off autocomplete

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Find a Movie</h1>
             <p>Search through thousands of titles</p>
             <form action="">
-                <input id="titleInput" type="text" class="button">
+                <input id="titleInput" type="text" class="button" autocomplete="off">
                 <button class="button" id="search" type="button">Search</button>
             </form>
         </div>
