--- a/index.html
+++ b/index.html
@@ -27,18 +27,15 @@
             </form>
         </div>
     </div>
-    <div class="full-width" id="movie-bg">
-        <div class="background-color">
-            <div class="wrapper clearfix" id="content">
+    <div id="content">
 
-            </div>
-        </div>
     </div>
 </main>
 <footer>
     <div class="full-width">
         <div class="wrapper clearfix">
-            <a href="https://www.themoviedb.org/documentation/api" title="The Movie Database"><img src="images/tmdb.png" alt=""></a>
+            <a href="https://www.themoviedb.org/documentation/api" title="The Movie Database"><img src="images/tmdb.png"
+                                                                                                   alt=""></a>
             <ul>
                 <li>&copy; 2018 <a target="_blank" href="https://github.com/Smytt">Kiril Parushev</a></li>
                 <li><a target="_blank" href="http://telerikacademy.com/">Telerik Academy</a></li>
@@ -52,6 +49,8 @@
         src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+<script src="node_modules/mustache/mustache.js"></script>
+<script src="js/show.js"></script>
 <script src="js/render.js"></script>
 <script src="js/tmdb.js"></script>
 <script src="js/app.js"></script>
