--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-<script src="node_modules/mustache/mustache.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.js"></script>
 <script src="js/show.js"></script>
 <script src="js/render.js"></script>
 <script src="js/tmdb.js"></script>
